# relay-group-chat

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  database.py  main.py  models.py  routes_auth.py  routes_rooms.py  routes_ws.py  schemas.py  ws_manager.py
backend/app/routes/: routes_auth.py  routes_rooms.py  routes_ws.py
backend/uploads/: a9c9a189e43549639ad6cc88f0cc5224_distributed-task-scheduler-docs.md
frontend/: Dockerfile  index.html  nginx.conf.template  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  AuthContext.jsx  api.js  index.css  main.jsx  theme.js  useWebSocket.js
frontend/src/components/: AuthScreen.jsx  Chat.jsx  Dashboard.jsx  InviteModal.jsx  Message.jsx
