[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.135.1",
    "passlib[argon2,bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "redis>=7.3.0",
    "sqlalchemy>=2.0.48",
]
